--- a/On ETFs/config.yaml
+++ b/On ETFs/config.yaml
@@ -1,4 +1,4 @@
-# config.yml
+# config.yaml
 
 general:
   start_date: "2012-01-01"
@@ -34,6 +34,10 @@ expiration_rules:
     - XLP
     - XLI
     - XLU
+  monthly_expiration_etfs:
+    - IJH
+    - IJR
+    - #MDY
 
 tickers:
   - SPY
